# InterviewPrep

./: MasterPlan.numbers  README.md
Books/C++/: c++ faq - The Definitive C++ Book Guide and List - Stack Overflow.htm
Categories/DynammicProgramming/: DailyTrack.md
Notes/: DailyTrack.md  TODO.md  Tricks.md
Train/: CMakeLists.txt  Structure.py
Train/Beekeeper/: input.json  mock_interview.py
Train/CLRS/: 2_1_2_inverted_insertion_sort.py  2_1_3_linear_search.py  2_1_4_binary_sum.py  2_2_2_selection_sort.py  merge_sort.py  sum2_equals_k.py
Train/CPP/CLRS/: CMakeLists.txt  binary_sum.cpp  insertion_sort.cpp  linear_search.cpp  main.cpp  merge_sort.cpp  selection_sort.cpp
Train/CPP/Leetcode/: 293.flip-game.cpp  44.wildcard-matching.cpp  469.convex-polygon.cpp
Train/CodeChef/: BIGSALE.py  CHEGLOVE.py  MINEAT.py  MINVOTE.py  MINVOTE2.py  MINVOTE3.py  MINVOTE_SUB.py  MIXCOLOR.py  XXOR.py  input.py
Train/Codejam/2018_69pts/: cubic_ufo.py  et.py  gopher.py  testing_tool.py  troublesort.py
Train/Codejam/C/: first.py
Train/Coursera_Algorithms/Part1/: union_find.py
Train/General/: binarysearch.py
Train/InterviewBit/: waysToFormMaxHeap.py
Train/Leetcode/Google/ArraysAndLists/: SpiralOrder.py  addBoldTag.py  gameOfLife.py  imageSmoother.py  intersectionOfTwoArrays.py  isNumber.py  isOneEditDistance.py  isPalindrome.py  lengthOfLongestSubstringKDistinct.py  maxConsecutiveOnes.py  maxConsecutiveOnes2.py  plusOne.py  read_one.py  read_repeat.py  (+3 more)
Train/Leetcode/Others/: findMedianSortedArrays.py  invertTree.py  merge.py
Train/SPOJ/: ABA12C.py  doughnut.py
(+5 files in other folders)
